--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/styled": "^10.0.27",
     "emotion-theming": "^10.0.27",
     "faunadb": "^2.13.1",
+    "isomorphic-unfetch": "^3.0.0",
     "next": "9.3.6",
     "react": "16.13.1",
     "react-dom": "16.13.1"
