--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
+    "date-fns": "^2.12.0",
     "emotion-theming": "^10.0.27",
     "faunadb": "^2.13.1",
     "isomorphic-unfetch": "^3.0.0",
