--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "faunadb": "^2.13.1",
     "isomorphic-unfetch": "^3.0.0",
     "next": "9.3.6",
+    "nprogress": "^0.2.0",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   },
   "devDependencies": {
     "@types/node": "^13.13.4",
+    "@types/nprogress": "^0.2.0",
     "@types/react": "^16.9.34",
     "typescript": "^3.8.3"
   }
